# vantix-workspace

./: .gitattributes  .gitignore  README.md
.github/workflows/: ci.yml
.husky/: pre-commit
.opencode/: opencode.json
.opencode/agents/: capital-rag-engineer.md  ceo.md  cto.md  data-pipeline-engineer.md  orchestrator.md  protocol-engineer.md  risk-quant.md  terminal-ux-engineer.md
.opencode/skills/vantix-daemon-patterns/: SKILL.md
.opencode/skills/vantix-security-hygiene/: SKILL.md
.opencode/skills/vantix-type-contract/: SKILL.md
.opencode/skills/vantix-ui-patterns/: SKILL.md
.opencode/skills/vantix-verification-checklist/: SKILL.md
docs/: README.md  agent-board.md  agent-handoff.md  roadmap.md
docs/projects/: vantix-daemon.md  vantix-ui.md
vantix-daemon/: Cargo.toml  MODELS.md  vantix_market.db-shm  vantix_market.db-wal
vantix-daemon/src/: api.rs  fleet.rs  health.rs  main.rs  models.rs  risk.rs  slippage.rs
vantix-daemon/src/capital/: corpus.rs  embedder.rs  errors.rs  mod.rs  search.rs
vantix-daemon/src/exchange/: binance.rs  mock_exchange.rs  mod.rs
vantix-daemon/src/storage/: db.rs
vantix-ui/: README.md  next.config.mjs  package-lock.json  package.json
vantix-ui/src/app/: globals.css  layout.tsx  page.tsx
vantix-ui/src/components/: AgentFleetPanel.tsx  CapitalSearchPanel.tsx  ImbalancePanel.tsx  MarketOverview.tsx  NarrativeEnginePanel.tsx  OrderBookDepth.tsx  RiskSnapshot.tsx  Sidebar.tsx  SlippageEstimator.tsx  SystemLogs.tsx  TopStatusBar.tsx
vantix-ui/src/lib/: adapters.ts  api-types.ts  config.ts  fetcher.ts  format.ts  (+2 more)
(+7 files in other folders)
