[package]
name = "vantix-daemon"
version = "0.1.0"
edition = "2021"

[features]
default = []
local-embeddings = ["dep:tokenizers", "dep:tract-onnx"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.32", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tokenizers = { version = "0.20", optional = true }
tract-onnx = { version = "0.21", optional = true }

[dev-dependencies]
tempfile = "3"
